added image gallery added retrofit service added more tests for the adviewmodel added images added binding adapter for viewpager added communication service added textprovider service

--- a/app/src/main/res/layout/activity_ad_details.xml
+++ b/app/src/main/res/layout/activity_ad_details.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
+        android:id="@+id/coordinator"
         tools:context="com.gumtree.adsdemo.addetails.AdDetailsActivity">
 
         <android.support.design.widget.AppBarLayout
@@ -31,17 +32,32 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
+                app:titleEnabled="false"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    app:layout_scrollFlags="scroll|enterAlways"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/AppTheme.PopupOverlay">
 
                 </android.support.v7.widget.Toolbar>
+                <include
+                    bind:viewModel="@{viewModel}"
 
+                    layout="@layout/ad_image_gallery"
+                         ></include>
+                <!--<ImageView-->
+                    <!--android:src="@drawable/ic_no_bookmark"-->
+                    <!--app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:scaleType="center"-->
+                    <!--app:layout_collapseMode="parallax"-->
+                    <!--android:fitsSystemWindows="true"-->
+                    <!--android:minHeight="100dp"/>-->
 
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
@@ -86,14 +102,14 @@
 
         </android.support.v4.widget.NestedScrollView>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom|end"
-            app:srcCompat="@android:drawable/ic_dialog_email" />
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/fab"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="@dimen/fab_margin"-->
+            <!--app:layout_anchor="@id/app_bar"-->
+            <!--app:layout_anchorGravity="bottom|end"-->
+            <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->
         <include layout="@layout/ad_contact_panel"
             bind:viewModel="@{viewModel}"></include>
 
