--- a/app/src/main/res/layout/ad_contact_panel.xml
+++ b/app/src/main/res/layout/ad_contact_panel.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/holo_red_light"
             android:text="@string/call"
+            android:onClick="@{()->viewModel.makePhoneCallCommand()}"
             android:layout_alignParentStart="true"
             android:textAllCaps="true"
             />
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/holo_red_light"
             android:text="@string/sms"
+            android:onClick="@{()->viewModel.sendSMSCommand()}"
             android:layout_centerHorizontal="true"
             android:textAllCaps="true"
             />
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/holo_red_light"
             android:text="@string/email"
+            android:onClick="@{()->viewModel.sendEmailCommand()}"
             android:elevation="5dp"
             android:textColor="#fff"
             android:shadowColor="@color/colorPrimary"
