--- a/app/src/main/res/menu/menu_ad_details.xml
+++ b/app/src/main/res/menu/menu_ad_details.xml
@@ -2,9 +2,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.gumtree.adsdemo.addetails.AdDetailsActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_bookmark"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/bookmark"
+
+        android:icon="@drawable/ic_bookmark"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_share"
+        android:orderInCategory="100"
+        android:title="@string/share"
+
+        android:icon="@drawable/ic_share"
+        app:showAsAction="always" />
+
 </menu>
