ui fixes added images added styles
added open map feature on selecting the address on the details

added tests for map feature on the viewmodel of ad details

--- a/app/src/main/res/layout/activity_ad_details.xml
+++ b/app/src/main/res/layout/activity_ad_details.xml
@@ -93,6 +93,8 @@
                 <include layout="@layout/ad_date_details"
                     bind:viewModel="@{viewModel}"
                     ></include>
+                <include layout="@layout/simple_divider"></include>
+
                 <include layout="@layout/ad_extra_properties"
                     bind:viewModel="@{viewModel}">
 
