--- a/app/src/main/res/layout/ad_date_details.xml
+++ b/app/src/main/res/layout/ad_date_details.xml
@@ -11,13 +11,14 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
+                  android:layout_marginTop="10dp"
+                  android:layout_marginBottom="10dp"
+                  android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/view_details_32" />
 
@@ -35,6 +36,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
             android:gravity="end"
+            android:textStyle="bold"
             android:text="@{viewModel.datePosted}" />
     </LinearLayout>
 </layout>
