--- a/app/src/main/res/layout/address_details.xml
+++ b/app/src/main/res/layout/address_details.xml
@@ -11,17 +11,21 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+                  android:layout_marginTop="10dp"
+                  android:layout_marginBottom="10dp"
+                  android:onClick="@{()->viewModel.openMapCommand()}"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_loc" />
+            android:src="@drawable/ic_location_on" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:gravity="center"
             android:layout_weight="1"
             android:text="@{viewModel.addressDetail.shortname}" />
 
@@ -31,6 +35,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
             android:gravity="end"
+            android:textStyle="bold"
             android:text="@{viewModel.price}" />
     </LinearLayout>
 </layout>
