--- a/app/src/main/res/layout/ad_extra_properties.xml
+++ b/app/src/main/res/layout/ad_extra_properties.xml
@@ -2,10 +2,10 @@
 <layout>
 
     <data>
-        <import type="com.gumtree.adsdemo.ui.databinding.CommonBindingAdapter"></import>
+        <import type="com.mrpdev.demoapp.ui.databinding.CommonBindingAdapter"></import>
         <variable
             name="viewModel"
-            type="com.gumtree.adsdemo.addetails.viewmodel.AdDetailViewModel"></variable>
+            type="com.mrpdev.demoapp.addetails.viewmodel.AdDetailViewModel"></variable>
     </data>
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
