--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.gumtree.adsdemo.ads.viewmodel.MainViewModel"></variable>
+            type="com.mrpdev.demoapp.ads.viewmodel.MainViewModel"></variable>
     </data>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,7 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.gumtree.adsdemo.ads.MainActivity">
+    tools:context="com.mrpdev.demoapp.ads.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    tools:context="com.gumtree.adsdemo.ads.MainActivity"
+                    tools:context="com.mrpdev.demoapp.ads.MainActivity"
                     tools:showIn="@layout/activity_main">
         <ImageView
             android:layout_width="wrap_content"
