--- a/app/src/main/res/layout/ad_detail_property.xml
+++ b/app/src/main/res/layout/ad_detail_property.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="model"
-            type="com.gumtree.adsdemo.addetails.net.models.AdditionalInformation"></variable>
+            type="com.mrpdev.demoapp.addetails.net.models.AdditionalInformation"></variable>
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
