--- a/app/src/main/res/menu/menu_ad_details.xml
+++ b/app/src/main/res/menu/menu_ad_details.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.gumtree.adsdemo.addetails.AdDetailsActivity">
+    tools:context="com.mrpdev.demoapp.addetails.AdDetailsActivity">
 
     <item
         android:id="@+id/action_bookmark"
